# la_searcher_bot

./: .dockerignore  .env.example  .env.test  .gitignore  .rooignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  _fix_kwargs.py  docker-compose.yml  hello_world.py  pyproject.toml  requirements-dev.txt  type_info.json
.devcontainer/: devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/workflows/: _reusable_wf.yml  _reusable_wf_v1_http.yml  _reusable_wf_v1_trigger.yml  _reusable_wf_v2_http.yml  _reusable_wf_yc.yml  check_lint.yml  deploy-yc-function.yml  deploy.yml  deploy_api_get_active_searches.yml  deploy_archive_notifications.yml  deploy_archive_to_bigquery.yml  deploy_check_first_posts_for_changes.yml  deploy_check_topics_by_upd_time.yml  deploy_communicate.yml  deploy_compose_notifications.yml  deploy_connect_to_forum.yml  deploy_identify_topics_by_upd_time.yml  deploy_identify_updates_of_first_posts.yml  deploy_identify_updates_of_folders.yml  deploy_identify_updates_of_topics.yml  deploy_manage_topics.yml  deploy_manage_users.yml  deploy_send_debug_to_admin.yml  deploy_send_news.yml  deploy_send_notifications.yml  deploy_send_notifications_helper.yml  deploy_send_notifications_helper_2.yml  deploy_title_recognize.yml  deploy_user_provide_info.yml  deploy_users_activate.yml  deploy_vk_admin_api.yml  deploy_vk_admin_panel.yml  deploy_vk_bot.yml  deploy_yandex_test.yml  lint.yml  lint_pull_request.yml  run_tests.yml  test.yml
.pylint/: .pylintrc  lint.py
.roo/skills/: code-review.md
archive_notifications/: main.py
archive_to_bigquery/: main.py  requirements.txt
check_first_posts_for_changes/: main.py
check_topics_by_upd_time/: main.py
communicate/: main.py  requirements.txt
compose_notifications/: main.py  requirements.txt
doc/: cloud_functions_architecture.html
doc/migrations/: 001_add_unique_constraint_comments.sql  002_remove_stale_table_and_fields.sql  003_remove_notif_mailings_table.sql  004_user_identity_map.sql  005_notif_by_user_messenger.sql  006_drop_unused_tables.sql  007_purge_search_first_posts_history.sql  008_notif_by_user_unique_constraint.sql  009_archive_notify_history_index.sql  010_remove_finished_searches_subscriptions.sql
docs/: contribution.md
frontend/vk-admin-panel/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
identify_updates_of_first_posts/: main.py  requirements.txt
identify_updates_of_folders/: main.py
identify_updates_of_topics/: main.py  requirements.txt
manage_topics/: main.py  requirements.txt
manage_users/: main.py  requirements.txt
plans/: comment_duplication_fix.md  vk_bot_duplication_architecture.md
scripts/: deploy_frontend.py  git-push-with-token.sh  seed_test_users.py
send_debug_to_admin/: main.py
send_news/: main.py  requirements.txt
send_notifications/: main.py  requirements.txt
src/: requirements.txt  temp_telethon.py
src/_dependencies/: __init__.py  cloud_func_parallel_guard.py  commons.py  content.py  db_client.py  funcs.py  google_tools.py  lock_manager.py  messenger_clients.py  misc.py  models.py  pubsub.py  recognition_schema.py  state_machine.py  telegram_api_wrapper.py  topic_management.py  user_settings_service.py  users_management.py  vk_api.py  vk_api_client.py  yandex_tools.py
src/api_get_active_searches/: main.py  requirements.txt
src/archive_notifications/: main.py  requirements.txt
src/archive_to_bigquery/: main.py  requirements.txt
src/check_first_posts_for_changes/: main.py  requirements.txt
src/check_topics_by_upd_time/: main.py  requirements.txt
src/communicate/: main.py  main_another.py  main_origin.py  requirements.txt  run_bot.py
src/compose_notifications/: main.py  requirements.txt
src/connect_to_forum/: main.py  requirements.txt
src/identify_updates_of_first_posts/: main.py  requirements.txt
src/identify_updates_of_folders/: main.py  requirements.txt
src/identify_updates_of_topics/: main.py  requirements.txt
src/log_inspector/: main.py  requirements.txt
src/manage_topics/: main.py  requirements.txt
src/manage_users/: main.py  requirements.txt
src/max_bot/: cli.py  main.py  requirements.txt
src/send_debug_to_admin/: main.py  requirements.txt
src/send_news/: main.py  requirements.txt
src/send_notifications/: __init__.py  main.py  requirements.txt
src/send_notifications_helper/: main.py  requirements.txt
src/send_notifications_helper_2/: main.py  requirements.txt
src/test_func/: db.sql  main.py  requirements.txt
src/title_recognize/: main.py  main_old.py  requirements.txt
src/user_provide_info/: main.py  requirements.txt
src/users_activate/: main.py  requirements.txt
src/vk_admin_api/: cli.py  handlers.py  main.py  requirements.txt
src/vk_bot/: bot_polling.py  cli.py  main.py  requirements.txt
terraform/: .gitignore  README.md  _func_api_trigger.tf  _func_cron_trigger.tf  _func_event_trigger.tf  main.tf  override.tf.example
tests/: common.py  conftest.py  test_api_get_active_searches.py  test_archive_notifications.py  test_archive_to_bigquery.py  test_check_first_posts_for_changes.py  test_check_topics_by_upd_time.py  test_communicate.py  test_compose_notifications.py  test_connect_to_forum.py  test_generate_cases.py  test_identify_updates_of_first_posts.py  test_identify_updates_of_folders.py  test_identify_updates_of_topics.py  test_legacy_check_first_posts_db.py  test_manage_topics.py  test_manage_users.py  test_migration_004_user_identity_map.py  test_run_bot.py  test_send_debug_to_admin.py  test_send_notifications.py  test_send_notifications_helper.py  test_send_notifications_helper_2.py  test_title_recognize.py  test_user_provide_info.py  test_users_activate.py  test_vk_bot.py
tests/dependencies/: __init__.py  test_content.py  test_db_guard.py  test_handler_registry.py  test_lock_manager.py  test_manage_topics.py  test_manage_users.py  test_message_formatter.py  test_misc.py  test_state_machine.py  test_user_settings_service.py
tests/factories/: db_factories.py  db_models.py  schemas.py  telegram.py  (+1 more)
(+304 files in other folders)
