[project]
name = "la-searcher-bot"
version = "0.1.0"
description = "Liza Alert searcher bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-pubsub==2.16.0",
    "google-cloud-secret-manager==2.16.0",
    "google-cloud-logging==3.5.0",
    "pydantic-settings==2.*",
    "psycopg2-binary==2.9.5",
    "pg8000==1.19.4",
    "SQLAlchemy==1.4.54",
    "python-telegram-bot[rate-limiter, job-queue]==20.2",
    "nest_asyncio",
    "retry==0.9.2",
]


[project.optional-dependencies]

develop = [
    "pytest>=7.0",
    "polyfactory>=2.18",
    "requests-mock>=1.12.1",
    "responses>=0.25.6",
    "pytest-freezegun==0.4.2",
    "pytest-cov>=6.0",
    "python-dotenv==1.*",
    "ruff==0.8.6",
    "uv>=0.5.15",
    "pytest-xdist==3.*",
    "pytest-benchmark>=5.0",
    "pyannotate==1.2.*",

    "types-beautifulsoup4",
    "types-psycopg2",
    "types-python-dateutil",
    "sqlacodegen==2.3.*",

    "mypy>=1.14.1",
    "types-requests >=2.31.0.6",
    "types-PyYAML",
    "types-cachetools",
    "types-pytz",
    "types-Pygments",
    "types-cffi",
    "types-colorama",
    "types-pyOpenSSL",
    "tqdm",

]

api_get_active_searches = [
    "beautifulsoup4==4.9.3",    # do we need to update it?
    "lxml==4.9.1",
    "functions-framework==3.*",
]

archive_notifications = ["pytz"]

archive_to_bigquery = ["google-cloud-bigquery==3.27.0"]

check_first_posts_for_changes = [
    "requests==2.31.0",
    "google-auth==2.19.1", # for API calls to other Google Cloud Functions
]

check_topics_by_upd_time = [
    "requests==2.31.0",
    "beautifulsoup4==4.9.3",
    "lxml==4.9.1",
    "google-cloud-storage==2.10.0",
]

communicate = ["httpx==0.23.3"]

compose_notifications = [
    "requests==2.31.0",
    "urllib3==1.26.18",   # http client
    "idna==2.10",         # translation of domain names
    "certifi==2023.7.22", # SSL certificates
    "chardet==4.0.0",     # encoding detector
    "python-dateutil",    # extension to datetime module
    "pytz==2021.1",       # timezone
]

connect_to_forum = [
    "requests==2.31.0",
    "urllib3==1.26.18",
    "beautifulsoup4==4.9.3",
    "lxml==4.9.1",
    "httpx==0.23.3",
]

identify_updates_of_first_posts = [
    "requests==2.31.0",
    "beautifulsoup4==4.9.3", # do we need to update it?
    "lxml==4.9.1",
]

identify_updates_of_topics = [
    "requests==2.31.0",
    "urllib3==1.26.18",             # http client
    "idna==2.10",                   # translation of domain names
    "certifi==2023.7.22",           # SSL certificates
    "beautifulsoup4==4.9.3",        # BS4
    "lxml==4.9.1",                  # for BS4
    "chardet==4.0.0",               # encoding detector
    "cchardet==2.1.7",              # encoding detector
    "python-dateutil==2.8.2",       # extension to datetime module
    "geopy==2.2.0",                 # geocoding / coordinates
    "yandex-geocoder==3.0.1",       # # geocoding / coordinates
    "natasha==1.4.0",               # recognition of person and location within text string
    "google-cloud-storage==2.10.0",
    "google-auth==2.19.1",          # for API calls to other Google Cloud Functions
    "yarl==1.18.3",
]

manage_topics = []

manage_users = []

send_debug_to_admin = ["httpx==0.23.3"]

send_notifications = ["urllib3==1.26.18", "httpx==0.23.3"]

title_recognize = [
    "python-dateutil==2.8.2",     # extension to datetime module
    "natasha==1.4.0",             # recognition of person and location within text string
    "functions-framework==3.4.0", # a part of Google Cloud Functions Gen 2 framework
]

user_provide_info = [
    "beautifulsoup4==4.9.3",    # do we need to update it?
    "lxml==4.9.1",
    "functions-framework==3.*",
]

users_activate = []


[tool.ruff]
line-length = 120
format.quote-style = 'single'

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
exclude = ["tests", "env", "venv", "src/title_recognize/main_old.py"]
files = [
    # "src/_dependencies/",
    "src/api_get_active_searches/",
    "src/archive_notifications/",
    "src/archive_to_bigquery/",
    "src/check_first_posts_for_changes/",
    "src/check_topics_by_upd_time/",
    "src/communicate/",
    "src/compose_notifications/",
    "src/connect_to_forum/",                # TODO refact
    "src/identify_updates_of_first_posts/",
    "src/identify_updates_of_topics/",
    "src/manage_topics/",
    "src/manage_users/",
    "src/send_debug_to_admin/",
    "src/send_notifications/",
    "src/title_recognize/",
    "src/user_provide_info/",
    # "src/users_activate/",
]
explicit_package_bases = true
ignore_missing_imports = false
install_types = true
no_implicit_optional = false
non_interactive = true
follow_untyped_imports = true
plugins = ["pydantic.mypy"]
